k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: system2024-deployment
  namespace: system2024
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
        - name: my-container
          image: kappsegla/system2024:sha-82bdaf2
          ports:
            - containerPort: 8080
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /livez
              port: 7999
            periodSeconds: 10
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /readyz
              port: 7999
            initialDelaySeconds: 10
            periodSeconds: 10
