k8s/externalservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: system2024
spec:
  ports:
    - port: 3306 # Replace with your database port
---
apiVersion: v1
kind: Endpoints
metadata:
  name: mysql-service
  namespace: system2024
subsets:
  - addresses:
      - ip: 192.168.1.109 # Replace with your database IP address
    ports:
      - port: 3306 # Replace with your database port
